[package]
name = "rec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
eframe = { version = "0.24.1", features = ["wgpu"] }
egui = "0.24.1"
egui_plot = "0.24.1"
egui_web = "0.17.0"
obws = "0.11.5"
tokio = { version = "1.35.0", features = ["full"] }
wasm-bindgen = "0.2.89"
